--- a/src/globals.css
+++ b/src/globals.css
@@ -1,8 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Special+Elite&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Manufacturing+Consent&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Content&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jacquard+12&display=swap");
 
 @import "tailwindcss";
+@plugin "@tailwindcss/typography";
 
 :root {
   --background: #ffffff;
@@ -12,6 +14,7 @@
 @theme {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
+  --font-pixel: "Jacquard 12";
   --font-typewriter: "Special Elite";
   --font-gothic: "Manufacturing Consent";
   --font-content: "Content"
