chore add prettier and formatting

--- a/src/globals.css
+++ b/src/globals.css
@@ -17,5 +17,5 @@
   --font-pixel: "Jacquard 12";
   --font-typewriter: "Special Elite";
   --font-gothic: "Manufacturing Consent";
-  --font-content: "Content"
+  --font-content: "Content";
 }
